--- a/index-3.html
+++ b/index-3.html
@@ -1145,7 +1145,7 @@
                             <div class="footer-column col-md-6 col-sm-6 col-xs-12">
                                 <div class="footer-widget gallery-widget">
                                     <div class="widget-inner">
-                                        <h3>Instagram</h3>
+                                        <h3>SEAMOS AMIGOS</h3>
                                         <div> 
                                             <div>
                                                 <div class="social-links">
