--- a/construccion.html
+++ b/construccion.html
@@ -17,14 +17,15 @@
 
         }
         .bgimg-1 {
-          background-image: url("images/error404error.jpg");
+          background-image: url("images/página-en-construccion.jpg");
           height: 100%;
+          width: 100%;
         }
 
         .caption {
           position: absolute;
-          left: 26%;
-          top: 37%;
+          left: 23%;
+          top: 18%;
           width: 60%;
           text-align: center;
           color: #000;
@@ -39,13 +40,13 @@
         }
 
         h1 {
-          color: #767676;
+          color: #fff;
         }
         h3 {
           letter-spacing: 5px;
           text-transform: uppercase;
           font: 20px "Lato", sans-serif;
-          color: #111;
+          color: #fff;
         }
     </style>
     <meta charset="utf-8">
@@ -54,9 +55,10 @@
   <body>
     <div class="bgimg-1">
       <div class="caption">
-        <h1>PÁGINA NO ENCONTRADA</h1>
-        <h3>Enlace roto o la página no existe. </h3>
-        <a href="index-3.html" style="font-size: 16px">Ir al inicio</a>
+         <h1 style="font-size: 45px;" >Página en construcción</h1>
+        <h3>Pronto quedará lista.</h3>
+        <h3>...</h3>
+        <a style="color:#fff" href="index-3.html" style="font-size: 16px">Ir al inicio</a>
       </div>
     </div>
     </div>
