--- a/index-3.html
+++ b/index-3.html
@@ -1130,12 +1130,12 @@
                             <div class="footer-column col-md-6 col-sm-6 col-xs-12">
                                 <div class="footer-widget info-widget">
                                     <div class="widget-inner">
-                                        <h3>Contact Us</h3>
+                                        <h3>CONTACTANOS</h3>
                                         <div class="info">
                                             <ul>
-                                                <li class="clearfix"><strong>Address: </strong> <span class="txt">2001 East Phillips Circle Centennial, Colorado</span></li>
-                                                <li class="clearfix"><strong>Phone: </strong> <span class="txt">(58) 244 386 8448</span></li>
-                                                <li class="clearfix"><strong>Email: </strong> <span class="txt"><a href="">info@Omegasoftve.com</a></span></li>
+                                                <li class="clearfix"><strong>Telefono: </strong> <span class="txt">(58) 244 386 8448</span></li>
+                                                <li class="clearfix"><strong>Email: </strong> <span class="txt"><a href="">info@omegasoftve.com</a></span></li>
+                                                <li class="clearfix"><strong>Direccion: </strong> <span class="txt">Calle páez #24 entre calle carabaño y leopoldo tosta sector centro. villa de cura, venezuela </span></li>
                                             </ul>
                                         </div>
                                     </div>
@@ -1145,16 +1145,16 @@
                             <div class="footer-column col-md-6 col-sm-6 col-xs-12">
                                 <div class="footer-widget gallery-widget">
                                     <div class="widget-inner">
-                                        <h3>SEAMOS AMIGOS</h3>
+                                        <h3>¡SEAMOS AMIGOS!</h3>
                                         <div> 
                                             <div>
                                                 <div class="social-links">
                                                         <ul class="clearfix">
-                                                            <li><a href="#"><span class="fa fa-facebook-f"></span></a></li>
-                                                            <li><a href="#"><span class="fa fa-twitter"></span></a></li>
-                                                            <li><a href="#"><span class="fa fa-skype"></span></a></li>
-                                                            <li><a href="#"><span class="fa fa-instagram"></span></a></li>
-                                                            <li><a href="#"><span class="fa fa-linkedin"></span></a></li>
+                                                            <li><a href="https://www.facebook.com/Omegasoftve/"><span class="fa fa-facebook-f"></span></a></li>
+                                                            <li><a href="https://twitter.com/Omegasoft01"><span class="fa fa-twitter"></span></a></li>
+                                                            <li><a href="https://join.skype.com/invite/MHGMd5TGZRR9"><span class="fa fa-skype"></span></a></li>
+                                                            <li><a href="https://www.instagram.com/omegasoftve/"><span class="fa fa-instagram"></span></a></li>
+                                                            <li><a href="https://www.linkedin.com/company/omegasoft-c-a"><span class="fa fa-linkedin"></span></a></li>
                                                         </ul>
                                                 </div>
                                             </div>
