--- a/construccion.html
+++ b/construccion.html
@@ -55,10 +55,10 @@
   <body>
     <div class="bgimg-1">
       <div class="caption">
-         <h1 style="font-size: 45px;" >Página en construcción</h1>
-        <h3>Pronto quedará lista.</h3>
+         <h1 style="font-size: 45px;" >Page under construction</h1>
+        <h3>Soon it will be ready.</h3>
         <h3>...</h3>
-        <a style="color:#fff" href="index-3.html" style="font-size: 16px">Ir al inicio</a>
+        <a style="color:#fff" href="index-3.html" style="font-size: 16px">Go to start</a>
       </div>
     </div>
     </div>
