--- a/index-3.html
+++ b/index-3.html
@@ -55,7 +55,7 @@
                             <div class="options-box clearfix">
                                 <div class="lang-box">
                                     <div class="dropdown">
-                                        <button style="color: #fff; font-size: 13px;" class="lang-btn dropdown-toggle" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Español<span class="fa fa-angle-down"></span></button>
+                                        <button style="color: #fff; font-size: 13px;" class="lang-btn dropdown-toggle" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Español<span class=""></span></button>
                                         <ul class="dropdown-menu search-panel" aria-labelledby="dropdownMenu2">
                                             <li><a href="construccion.html">English</a></li>
                                         </ul>
@@ -1130,7 +1130,7 @@
                             <div class="footer-column col-md-6 col-sm-6 col-xs-12">
                                 <div class="footer-widget info-widget">
                                     <div class="widget-inner">
-                                        <h3>CONTACTANOS</h3>
+                                        <h3 style="text-align: center;">CONTACTANOS</h3>
                                         <div class="info">
                                             <ul>
                                                 <li class="clearfix"><strong>Telefono: </strong> <span class="txt">(58) 244 386 8448</span></li>
@@ -1145,7 +1145,7 @@
                             <div class="footer-column col-md-6 col-sm-6 col-xs-12">
                                 <div class="footer-widget gallery-widget">
                                     <div class="widget-inner">
-                                        <h3>¡SEAMOS AMIGOS!</h3>
+                                        <h3 style="margin-left: 25px;" >Redes Sociales</h3>
                                         <div> 
                                             <div>
                                                 <div class="social-links">
@@ -1159,7 +1159,7 @@
                                                 </div>
                                             </div>
                                             <div style="width: 203px;">
-                                                    <h4 style="text-align: center; color: white; font-size: 16px;">Subcribete a Newsletter</h4>
+                                                    <h4 style="text-align: center; color: white; font-size: 16px;padding: 7px; margin-top: 14px !important;">Suscribete a nuestros boletin mensual</h4>
                                                 <div class="input-group mb-3">
                                                     <input type="text" class="form-control" placeholder="Email" aria-label="Recipient's username" aria-describedby="button-addon2">
                                                     <div class="input-group-append">
@@ -1167,9 +1167,9 @@
                                                     </div>
                                                 </div>
                                             </div>
-                                            <div style="margin-left: 26px;"> 
-                                                <label style="color: white; font-size: 15px;">
-                                                    <input type="checkbox" checked autocomplete="off"> Acepto Politicas de <br> tratamiento de datos.
+                                            <div style=""> 
+                                                <label style="color: white; font-size: 9px;">
+                                                    <input type="checkbox" checked autocomplete="off"> Acepto Politicas de tratamiento de datos.
                                                 </label>
                                             </div>
                                         </div>
