--- a/index-3.html
+++ b/index-3.html
@@ -48,14 +48,14 @@
         <div class="header-top" style="background: #062c4c;">
         	<div class="auto-container clearfix">
             	<div class="top-right clearfix">
-                	<ul class="info clearfix">
-                        <li><a href="#" style="color: #fff; font-size: 13px;"><span class="icon flaticon-clock"></span> info@Omegasoftve.com</a></li>
-                    	<li><a href="#" style="color: #fff; font-size: 13px;"><span class="icon flaticon-phone-book"></span>(58) 244 386 8448</a></li>                                  
+                	<ul class="info clearfix" style="margin-bottom: 0rem;">
+                        <li><a href="#" style="color: #fff; font-size: 14px;"><span  class="fa fa-envelope"></span> info@Omegasoftve.com</a></li>
+                    	<li><a href="#" style="color: #fff; font-size: 14px;"><span style="width: 17px;" class="fa fa-phone"></span>(58) 244 386 8448</a></li>                                  
                         <div class="top-right clearfix">
                             <div class="options-box clearfix">
                                 <div class="lang-box">
                                     <div class="dropdown">
-                                        <button style="color: #fff; font-size: 13px;" class="lang-btn dropdown-toggle" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Español<span class=""></span></button>
+                                        <button style="color: #fff; font-size: 14px; margin-top: 3px;" class="lang-btn dropdown-toggle" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Español<span class=""></span></button>
                                         <ul class="dropdown-menu search-panel" aria-labelledby="dropdownMenu2">
                                             <li><a href="construccion.html">English</a></li>
                                         </ul>
