--- a/index-3.html
+++ b/index-3.html
@@ -142,7 +142,7 @@
                                         <ul>
                                             <li><a href="blog-list.html">Quines somos</a></li>
 											<li><a href="blog-grid.html">Nuestro Equipo</a></li>
-                                            <li><a href="blog-detail.html">Contáctanos</a></li>
+                                            <li><a href="contact.html">Contáctanos</a></li>
                                         </ul>
                                     </li>
                                     <!--<li><a href="contact.html">Contact Us</a></li>-->
@@ -227,7 +227,7 @@
                                     <ul>
                                         <li><a href="blog-list.html">Quines somos</a></li>
 										<li><a href="blog-grid.html">Nuestro Equipo</a></li>
-                                        <li><a href="blog-detail.html">Contáctanos</a></li>
+                                        <li><a href="contact.html">Contáctanos</a></li>
                                     </ul>
                                 </li>
                             </ul>
