--- a/index-3.html
+++ b/index-3.html
@@ -1135,7 +1135,7 @@
                                             <ul>
                                                 <li class="clearfix"><strong>Telefono: </strong> <span class="txt">(58) 244 386 8448</span></li>
                                                 <li class="clearfix"><strong>Email: </strong> <span class="txt"><a href="">info@omegasoftve.com</a></span></li>
-                                                <li class="clearfix"><strong>Direccion: </strong> <span class="txt">Calle páez #24 entre calle carabaño y leopoldo tosta sector centro. villa de cura, venezuela </span></li>
+                                                <li class="clearfix"><strong>Direccion: </strong> <span class="txt">Calle páez #24 entre calle carabaño y leopoldo tosta sector centro. villa de cura, venezuela.</span></li>
                                             </ul>
                                         </div>
                                     </div>
