--- a/contact.html
+++ b/contact.html
@@ -212,7 +212,7 @@
     	<div class="auto-container">
         	
             <div class="row">
-                <div class="col-md-8 col-sm-12 col-xs-12">
+                <div class="col-md-8 col-sm-12 col-xs-12" >
                    <div class="sec-title centered">
                        <h1>Envianos un mensaje</h1>
                        <div class="text">Contacto directo con rápida respuesta.</div>
@@ -244,10 +244,10 @@
                    </div>
                 </div>
                 
-                <div class="col-md-4 col-sm-12 col-xs-12">
-                    <div class="sec-title centered">
-                        <h1>Información de Contacto</h1>
-                        <div style="margin-top: 50px;">
+                <div class="col-md-4 col-sm-12 col-xs-12" style="border-left: 1px solid #ccc; width:1px; height:430px;">
+                    <div class="sec-title centered" style="margin-top: 12px;">
+                        <h1 style="font-size: 34px">Información de Contacto</h1>
+                        <div style="margin-top: 61px;">
                             <h2 style="text-align: -webkit-left;">Direccion:</h2>
                             <div class="text" style="text-align: initial;">Calle páez #24 entre calle carabaño y leopoldo tosta sector centro. villa de cura, venezuela.</div>
                         </div>
