--- a/contact.html
+++ b/contact.html
@@ -212,7 +212,7 @@
     	<div class="auto-container">
         	
             <div class="row">
-                <div class="col-md-8 col-sm-12 col-xs-12" >
+                <div class="col-md-8 col-sm-12 col-xs-12" style="padding-right: 20px">
                    <div class="sec-title centered">
                        <h1>Envianos un mensaje</h1>
                        <div class="text">Contacto directo con rápida respuesta.</div>
@@ -220,21 +220,14 @@
                    <div class="form-style-one quote-form">
                        <form method="post" action="http://themebunch.com/html/fico/sendemail.php" id="contact-form">
                            <div class="row clearfix">
-                               <div class="form-group col-md-4 col-sm-6 col-xs-12">
+                               <div class="form-group col-md-6 col-sm-6 col-xs-12">
                                    <input type="text" name="username" value="" placeholder="Nombre y Apellido" required>
                                </div>
-                               <div class="form-group col-md-4 col-sm-6 col-xs-12">
+                               <div class="form-group col-md-6 col-sm-6 col-xs-12">
                                    <input type="text" name="email" value="" placeholder="Correo Electronico" required>
                                </div>
-                               <div class="form-group col-md-4 col-sm-12 col-xs-12">
-                                   <select name="category">
-                                       <option>Pregunta</option>
-                                       <option>Sugerencia</option>
-                                       <option>Soporte</option>
-                                   </select>
-                               </div>
                                <div class="form-group col-md-12 col-sm-12 col-xs-12">
-                                   <textarea name="message" placeholder="Write Message"></textarea>
+                                   <textarea name="message" placeholder="Mensaje"></textarea>
                                </div>
                                <div class="form-group col-md-12 col-sm-12 col-xs-12">
                                    <div class="text-center"><button type="submit" class="theme-btn btn-style-two">Enviar</button></div>
@@ -249,15 +242,15 @@
                         <h1 style="font-size: 34px">Información de Contacto</h1>
                         <div style="margin-top: 61px;">
                             <h2 style="text-align: -webkit-left;">Direccion:</h2>
-                            <div class="text" style="text-align: initial;">Calle páez #24 entre calle carabaño y leopoldo tosta sector centro. villa de cura, venezuela.</div>
+                            <div class="text" style="text-align: initial; margin-top: -15px">Calle páez #24 entre calle carabaño y leopoldo tosta sector centro. villa de cura, venezuela.</div>
                         </div>
                         <div style="margin-top: 5px;">
-                            <h2 style="text-align: -webkit-left;">Telefono:</h2>
-                            <div class="text" style="text-align: initial;">(58) 244 386 8448</div>
+                            <h2 style="text-align: -webkit-left; margin-top: 10px;">Telefono:</h2>
+                            <div class="text" style="text-align: initial; margin-top: -15px">(58) 244 386 8448</div>
                         </div>
                         <div style="margin-top: 5px;">
-                            <h2 style="text-align: -webkit-left;">Email:</h2>
-                            <div class="text" style="text-align: initial;">info@omegasoftve.com</div>
+                            <h2 style="text-align: -webkit-left; margin-top: 10px;">Email:</h2>
+                            <div class="text" style="text-align: initial; margin-top: -15px">info@omegasoftve.com</div>
                         </div>
                     </div>
                 </div>
