--- a/index-3.html
+++ b/index-3.html
@@ -140,7 +140,7 @@
                                     </li>
                                     <li class="dropdown"><a href="#">Nosotros</a>
                                         <ul>
-                                            <li><a href="blog-list.html">Quines somos</a></li>
+                                            <li><a href="QuienesSomos.html">Quines somos</a></li>
 											<li><a href="blog-grid.html">Nuestro Equipo</a></li>
                                             <li><a href="contact.html">Contáctanos</a></li>
                                         </ul>
@@ -225,7 +225,7 @@
                                 </li>
                                 <li class="dropdown"><a href="#">Nosotros</a>
                                     <ul>
-                                        <li><a href="blog-list.html">Quines somos</a></li>
+                                        <li><a href="QuienesSomos.html">Quines somos</a></li>
 										<li><a href="blog-grid.html">Nuestro Equipo</a></li>
                                         <li><a href="contact.html">Contáctanos</a></li>
                                     </ul>
