--- a/index-3.html
+++ b/index-3.html
@@ -124,7 +124,7 @@
                                     </li>
                                     <li class="dropdown"><a href="#">Partner</a>
                                         <ul>
-                                            <li><a href="projects.html">Nuestros Partner</a></li>
+                                            <li><a href="partners.html">Nuestros Partner</a></li>
                                             <li><a href="projects-2.html">Programa Partner</a></li>
                                             <li><a href="projects-2.html">Portal Partner</a></li>
                                         </ul>
@@ -211,7 +211,7 @@
 								</li>
                                 <li class="dropdown"><a href="#">Partner</a>
                                     <ul>
-                                        <li><a href="projects.html">Nuestros Partner</a></li>
+                                        <li><a href="partners.html">Nuestros Partner</a></li>
                                         <li><a href="projects-2.html">Programa de Partner</a></li>
                                         <li><a href="projects-2.html">Portal Partner</a></li>
                                     </ul>
