--- a/partners.html
+++ b/partners.html
@@ -145,7 +145,7 @@
                                     </li>
                                     <li class="dropdown"><a href="#">Clientes</a>
                                         <ul>
-                                            <li><a href="services.html">Nuestros Clientes</a></li>
+                                            <li><a href="nuestrosClientes.html">Nuestros Clientes</a></li>
                                             <li><a href="financial-planning.html">Casos de Éxito</a></li>
                                             <!--<li><a href="savings-investment.html">Savings &amp; Investment</a></li>
                                             <li><a href="private-banking.html">Private Banking</a></li>
@@ -232,7 +232,7 @@
                                 </li>
                                 <li class="dropdown"><a href="#">Clientes</a>
 									<ul>
-										<li><a href="services.html">Nuestros Clientes</a></li>
+										<li><a href="nuestrosClientes.html">Nuestros Clientes</a></li>
 										<li><a href="financial-planning.html">Casos de Éxito</a></li>
 										<!--<li><a href="savings-investment.html">Savings &amp; Investment</a></li>
 										<li><a href="private-banking.html">Private Banking</a></li>
