--- a/index-3.html
+++ b/index-3.html
@@ -133,7 +133,7 @@
                                         <ul>
                                             <li><a href="careers.html">blog</a></li>
                                             <li><a href="testimonials.html">Webcast</a></li>
-                                            <li><a href="partners.html">Newsletter</a></li>
+                                            <li><a href="Newsletter.html">Newsletter</a></li>
                                            <!-- <li><a href="faqs.html">FAQs</a></li>
                                             <li><a href="coming-soon.html">Comming Soon</a></li>-->
                                         </ul>
@@ -220,7 +220,7 @@
                                 	<ul>
                                         <li><a href="careers.html">Blog</a></li>
                                         <li><a href="testimonials.html">Webcast</a></li>
-                                        <li><a href="partners.html">Newsletter</a></li>
+                                        <li><a href="Newsletter.html">Newsletter</a></li>
                                     </ul>
                                 </li>
                                 <li class="dropdown"><a href="#">Nosotros</a>
