Banners Newsletter y Nuestros Clientes

--- a/Newsletter.html
+++ b/Newsletter.html
@@ -163,7 +163,7 @@
                                     <li class="dropdown"><a href="#">Comunidad</a>
                                         <ul>
                                             <li><a href="careers.html">blog</a></li>
-                                            <li><a href="testimonials.html">Webcast</a></li>
+                                            <li><a href="webcast.html">Webcast</a></li>
                                             <li><a href="Newsletter.html">Newsletter</a></li>
                                            <!-- <li><a href="faqs.html">FAQs</a></li>
                                             <li><a href="coming-soon.html">Comming Soon</a></li>-->
@@ -250,7 +250,7 @@
                                 <li class="dropdown"><a href="#">Comunidad</a>
                                 	<ul>
                                         <li><a href="careers.html">Blog</a></li>
-                                        <li><a href="testimonials.html">Webcast</a></li>
+                                        <li><a href="webcast.html">Webcast</a></li>
                                         <li><a href="Newsletter.html">Newsletter</a></li>
                                     </ul>
                                 </li>
@@ -274,7 +274,7 @@
     <!--End Main Header -->
 
     <section class="page-title" style="height: 530px;">
-        <div class="image-layer" style="background-image:url(images/background/quienes-somos.jpg); opacity: 10.0;"></div>
+        <div class="image-layer" style="background-image:url(images/background/newsletter.jpg); opacity: 10.0;"></div>
         <div class="auto-container">
         </div>
     </section>
