--- a/partners.html
+++ b/partners.html
@@ -163,7 +163,7 @@
                                     <li class="dropdown"><a href="#">Comunidad</a>
                                         <ul>
                                             <li><a href="careers.html">blog</a></li>
-                                            <li><a href="testimonials.html">Webcast</a></li>
+                                            <li><a href="webcast.html">Webcast</a></li>
                                             <li><a href="Newsletter.html">Newsletter</a></li>
                                            <!-- <li><a href="faqs.html">FAQs</a></li>
                                             <li><a href="coming-soon.html">Comming Soon</a></li>-->
@@ -250,7 +250,7 @@
                                 <li class="dropdown"><a href="#">Comunidad</a>
                                 	<ul>
                                         <li><a href="careers.html">Blog</a></li>
-                                        <li><a href="testimonials.html">Webcast</a></li>
+                                        <li><a href="webcast.html">Webcast</a></li>
                                         <li><a href="Newsletter.html">Newsletter</a></li>
                                     </ul>
                                 </li>
