--- a/contact.html
+++ b/contact.html
@@ -266,7 +266,7 @@
                                     <li class="dropdown"><a href="#">Comunidad</a>
                                         <ul>
                                             <li><a href="careers.html">blog</a></li>
-                                            <li><a href="testimonials.html">Webcast</a></li>
+                                            <li><a href="webcast.html">Webcast</a></li>
                                             <li><a href="Newsletter.html">Newsletter</a></li>
                                            <!-- <li><a href="faqs.html">FAQs</a></li>
                                             <li><a href="coming-soon.html">Comming Soon</a></li>-->
@@ -353,7 +353,7 @@
                                 <li class="dropdown"><a href="#">Comunidad</a>
                                 	<ul>
                                         <li><a href="careers.html">Blog</a></li>
-                                        <li><a href="testimonials.html">Webcast</a></li>
+                                        <li><a href="webcast.html">Webcast</a></li>
                                         <li><a href="Newsletter.html">Newsletter</a></li>
                                     </ul>
                                 </li>
