--- a/webcast.html
+++ b/webcast.html
@@ -274,7 +274,7 @@
     <!--End Main Header -->
 
     <section class="page-title" style="height: 530px;">
-        <div class="image-layer" style="background-image:url(images/background/quienes-somos.jpg); opacity: 10.0;"></div>
+        <div class="image-layer" style="background-image:url(images/background/webcast.jpg); opacity: 10.0;"></div>
         <div class="auto-container">
         </div>
     </section>
@@ -283,35 +283,9 @@
         <div class="auto-container">
             <div class="row">
                 <div class="col-md-12 col-sm-12 col-xs-12" style="margin-top: 40px;">
-                    <div class="sec-title centered" style="text-align: initial; margin-bottom: 30px">
-                        <h1>Acerca de Nosotros</h1>
-                        <div class="text">Omegasoft nace en el 2010 como una empresa de servicios IT, 
-                        Integrada con un grupo de profecionales experimentados y preparados en el área
-                        de gestion servicios IT, ofreciendo a las organazaciones, servicios profecionales
-                        para mejorar sus capacidades organizativas, mejorar las prestación de servicio
-                        por parte de su centro de soporte, redicir tiempos y mejorar la eficiencia.</div>
-                    </div>
-                </div>
-                <div style="height: 100px;"> 
-                    <div style="height: 70px; background: #fff">
-                        <div class="col-md-3 col-sm-12 col-xs-12">
-                            <div class="sec-title centered">
-                                <div class="text" style="text-align: initial;">Suscribase al Newsletter de ManageEngine</div>
-                            </div>
-                        </div>
-                        <div class="col-md-3 col-sm-12 col-xs-12" style="margin-top: 23px;">
-                            <div class="input-group mb-3">
-                                <input type="text" class="form-control" placeholder="Email ID" aria-label="Recipient's username" aria-describedby="button-addon2">
-                                <div class="input-group-append">
-                                    <button style="background: green; color: white; font-size: 15px;" class="btn btn-outline-secondary" type="button" id="button-addon2">Enviar</button>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-6 col-sm-12 col-xs-12">
-                            <div class="sec-title centered">
-                                <div class="text" style="text-align: initial;">Nota:Nunca venderemos o compatiremos su direccion de correo electronico</div>
-                            </div>
-                        </div>
+                    <div class="sec-title centered" style="margin-bottom: 30px">
+                        <h1 style="font-size: 30px">Conozca las principales funcionalidades que ofrece <br> nuestro aplicativo</h1>
+                        <div class="text">Participe en nuestros Webcast en línea, interactúe con nuestros especialistas y descubra las soluciones que <br> traemos para ustedes.</div>
                     </div>
                 </div>
             </div>
