Contenido Quienes Somos

--- a/QuienesSomos.html
+++ b/QuienesSomos.html
@@ -515,41 +515,39 @@
             <div class="auto-container">
                 <!--Heading-->
                 <div class="sec-title-two centered">
-                    <h1>What Say Our Clients</h1>
-                </div>
+                    <h1>Nuestro Equipo</h1>
+                </div>-->
                 
                 <div class="carousel-box">
                     <div class="testimonial-carousel-two owl-theme owl-carousel">
                         <!--Slide Item-->
                         <div class="testimonial-block">
                             <div class="inner">
-                                <div class="text">1Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras gravida erat quis libero iaculis, quis hendrerit enim dignissim. Pellentesque pharetra euismod metus, nec efficitur risus.</div>
+                                <div class="text">Me complace compartir mis
+                                       experiencias como parte de la familia Omegasoft, donde he
+                                       recibido grandes oportunidades y retos durante cinco años
+                                       de carrera, es una empresa que permite a sus empleados un
+                                       crecimiento continuo y donde contamos con un grupo de profesionales
+                                       que trabajan esmeradamente para la satisfacción de nuestros clientes..</div>
                                 <div class="info">
                                     <figure class="image img-circle"><img class="img-circle" src="images/resource/author-2.jpg" alt=""></figure>
-                                    <h4>Jk. Shaif Ali</h4>
-                                    <div class="designation">CEO, LLP Group</div>
+                                    <h4>Dubraska Figuera </h4>
+                                    <div class="designation">Support Coordinator</div>
                                 </div>
                             </div>
                         </div>
                         <!--Slide Item-->
                         <div class="testimonial-block">
                             <div class="inner">
-                                <div class="text">2Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras gravida erat quis libero iaculis, quis hendrerit enim dignissim. Pellentesque pharetra euismod metus, nec efficitur risus.</div>
+                                <div class="text">Omegasoft significo para mi en su momento un cambio
+                                      de aire, hoy tres años después representa un lugar de crecimiento
+                                      profesional que se va gestando día a día, un lugar donde he encontrado
+                                      excelentes compañeros; donde los errores te llevan a mejorar y que con
+                                      constancia y perseverancia se pueden alcanzar las metas.</div>
                                 <div class="info">
-                                    <figure class="image img-circle"><img class="img-circle" src="images/resource/author-3.jpg" alt=""></figure>
-                                    <h4>Jk. Shaif Ali</h4>
-                                    <div class="designation">Manager of EOF Group</div>
-                                </div>
-                            </div>
-                        </div>
-                        <!--Slide Item-->
-                        <div class="testimonial-block">
-                            <div class="inner">
-                                <div class="text">3Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras gravida erat quis libero iaculis, quis hendrerit enim dignissim. Pellentesque pharetra euismod metus, nec efficitur risus.</div>
-                                <div class="info">
-                                    <figure class="image img-circle"><img class="img-circle" src="images/resource/author-2.jpg" alt=""></figure>
-                                    <h4>Jk. Shaif Ali</h4>
-                                    <div class="designation">CEO, LLP Group</div>
+                                    <figure class="image img-circle"><img class="img-circle" src="images/resource/author-1.jpg" alt=""></figure>
+                                    <h4>Andersón Guerrero </h4>
+                                    <div class="designation">Web Developer Leader</div>
                                 </div>
                             </div>
                         </div>
