Contenido Quienes Somos

--- a/QuienesSomos.html
+++ b/QuienesSomos.html
@@ -516,7 +516,7 @@
                 <!--Heading-->
                 <div class="sec-title-two centered">
                     <h1>Nuestro Equipo</h1>
-                </div>-->
+                </div>
                 
                 <div class="carousel-box">
                     <div class="testimonial-carousel-two owl-theme owl-carousel">
