--- a/index-3.html
+++ b/index-3.html
@@ -55,7 +55,7 @@
                             <div class="options-box clearfix">
                                 <div class="lang-box">
                                     <div class="dropdown">
-                                        <button style="color: #fff; font-size: 14px; margin-top: 3px;" class="lang-btn dropdown-toggle" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Español<span class=""></span></button>
+                                        <button style="color: #fff;margin-top: 3px;" class="lang-btn dropdown-toggle" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Español<span class=""></span></button>
                                         <ul class="dropdown-menu search-panel" aria-labelledby="dropdownMenu2">
                                             <li><a href="construccion.html">English</a></li>
                                         </ul>
