--- a/index-3.html
+++ b/index-3.html
@@ -93,7 +93,7 @@
                             
                             <div class="navbar-collapse collapse clearfix">
                                 <ul class="navigation clearfix">
-                                    <li class="current dropdown"><a href="#">Soluciones</a>
+                                    <li class="current dropdown"><a href="#"></a>Soluciones</a>
                                         <ul>
                                             <li><a href="index-3.html">OmegaITSM</a></li>
                                             <!--<li><a href="index-3.html">Home 02</a></li>
